// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering should render valid snapshot 1`] = `
<FormGroup
  tag="div"
>
  <Label
    htmlFor="characterId"
    tag="label"
  >
    Character
  </Label>
  <Input
    data-spec="character-select-field"
    defaultValue={-1}
    id="character-id"
    name="characterId"
    onChange={[Function]}
    tag="p"
    type="select"
  >
    <option
      data-spec="character-select-null-value"
      value={null}
    >
      Select Character
    </option>
  </Input>
</FormGroup>
`;

exports[`rendering should render valid snapshot with items 1`] = `
<FormGroup
  tag="div"
>
  <Label
    htmlFor="characterId"
    tag="label"
  >
    Character
  </Label>
  <Input
    data-spec="character-select-field"
    defaultValue={-1}
    id="character-id"
    name="characterId"
    onChange={[Function]}
    tag="p"
    type="select"
  >
    <option
      data-spec="character-select-null-value"
      value={null}
    >
      Select Character
    </option>
    <CharacterSelectItem
      character={
        Object {
          "characterId": 1,
        }
      }
      key="1"
    />
    <CharacterSelectItem
      character={
        Object {
          "characterId": 2,
        }
      }
      key="2"
    />
    <CharacterSelectItem
      character={
        Object {
          "characterId": 3,
        }
      }
      key="3"
    />
  </Input>
</FormGroup>
`;

exports[`rendering should render valid snapshot with items and no null value 1`] = `
<FormGroup
  tag="div"
>
  <Label
    htmlFor="characterId"
    tag="label"
  >
    Character
  </Label>
  <Input
    data-spec="character-select-field"
    defaultValue={-1}
    id="character-id"
    name="characterId"
    onChange={[Function]}
    tag="p"
    type="select"
  >
    <CharacterSelectItem
      character={
        Object {
          "characterId": 1,
        }
      }
      key="1"
    />
    <CharacterSelectItem
      character={
        Object {
          "characterId": 2,
        }
      }
      key="2"
    />
    <CharacterSelectItem
      character={
        Object {
          "characterId": 3,
        }
      }
      key="3"
    />
  </Input>
</FormGroup>
`;

exports[`rendering should render valid snapshot with non-default props 1`] = `
<FormGroup
  tag="div"
>
  <Label
    htmlFor="characterId"
    tag="label"
  >
    Character
  </Label>
  <Input
    data-spec="character-select-field"
    defaultValue={5}
    id="character-id"
    name="characterId"
    onChange={[Function]}
    tag="p"
    type="select"
  >
    <option
      data-spec="character-select-null-value"
      value={null}
    >
      Select a Character
    </option>
  </Input>
</FormGroup>
`;
